@@ -28,9 +28,7 @@
 
           <!-- new event -->
           <div class="cal_new_event">
-            <a href="${calendar.add_event_url}" class="button primary_button">
-              <span>Add Event</span>
-            </a>    
+            <a href="${calendar.add_event_url}">Add Event</a>    
           </div>
         </div>
 
